# hfdemos

./: .gitignore  README.md  demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  prompt_debugger.py  pyproject.toml
.devcontainer/: devcontainer.json
.docker/: Dockerfile.dev.gpu  docker-compose-dev.yml
data/: a_casino_oddyssey_in_cyberspace.txt  atlas_shrugged.txt
